work on inventory

--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -18,6 +18,7 @@
 	"yourSales": "tus ventas",
 	"yourProfile": "tu perfil",
 	"comments": "Comentarios",
+	"success": "Exito",
 	"notes": "Notas",
 	"managerHub": "Portal de Managers",
 	"refreshMsg": "Una nueva versión de esta aplicación está disponible. La aplicación se actualizará ahora",
