Implemented second inventory check and refactor inventory

--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -2,11 +2,14 @@
 	"step": "step",
 	"or": "or",
 	"of": "of",
+	"from": "from",
+	"to": "to",
 	"invite": "invite",
 	"saveContinue": "Save and continue",
 	"name": "name",
 	"cancel": "cancel",
 	"continue": "continue",
+	"confirm": "confirm",
 	"finish": "finish",
 	"logout": "log out",
 	"home": "home",
