--- a/src/lib/translations/en/home.json
+++ b/src/lib/translations/en/home.json
@@ -1,22 +1,13 @@
 {
 	"title": "Welcome to Openversum",
 	"managerMsg": "You are a Manager",
-	"managerBtn": "Visit the Manager portal",
-	"inventory": "Availible filters",
-	"totSales": "Total filters sold",
-	"description": "As an Openversum entrepreneur, use this application for the following:",
-	"li1": "Register the sale when you sell a filter",
-	"li2": "Add information about the water when you sell a filter",
-	"li3": "Register the interaction when you meet a customer and do not sell a filter",
-	"li4": "View, manage, and add information to your sales",
-	"li5": "View, add, and manage your customers",
-	"recSale": "Record a sale",
-	"recInter": "Record an interaction",
-	"locationAccessTitle": "Location Access Required",
-	"locationExplanation": "Your location is essential for using this app, enabling us to:",
-	"locationBullet1": "Track and manage filter sales effectively.",
-	"locationBullet2": "Connect you with clients and inventory in your area",
-	"locationBullet3": "Provide updates and support",
 	"privacyStatement": "We prioritize your privacy and will not share your geolocation data with any third parties without your explicit consent.",
-	"understandButton": "I Understand and Agree"
+	"understandButton": "I Understand and Agree",
+	"performInventoryCheck": "Perform inventory check",
+	"inactiveEntrepreneur": "Inactive entrepreneur",
+	"lastOrder": "Last order",
+	"salesPeriodInProgress": "Sales period in progress",
+	"fromDate": "From",
+	"toDate": "Until",
+	"managerLabel": "Manager"
 }
