--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -2,11 +2,14 @@
 	"step": "paso",
 	"or": "o",
 	"of": "de",
+	"from": "desde",
+	"to": "hasta",
 	"invite": "invitar",
 	"saveContinue": "Guardar y continuar",
 	"name": "nombre",
 	"cancel": "cancelar",
 	"continue": "continuar",
+	"confirm": "confirmar",
 	"finish": "finalizar",
 	"logout": "cerrar sesión",
 	"home": "inicio",
