--- a/src/lib/translations/es/home.json
+++ b/src/lib/translations/es/home.json
@@ -1,22 +1,13 @@
 {
 	"title": "Bienvenido/a a Openversum",
 	"managerMsg": "Eres un/a Manager",
-	"managerBtn": "Visita el portal de Managers",
-	"inventory": "Filtros en inventario",
-	"totSales": "Total filtros vendidos",
-	"description": "Como emprendedor/a de Openversum usa esta aplicacion para lo siguiente:",
-	"li1": "Cuando vendas un filtro, regístra la venta",
-	"li2": "Añade información sobre el agua cuando vendas un filtro",
-	"li3": "Cuando te encurentres con un/a cliente y no vendas un filtro, regístra la interacción",
-	"li4": "Visualiza, gestiona y añade información a tus ventas",
-	"li5": "Visualiza, añade y gestiona tus clientes",
-	"recSale": "Registrar venta",
-	"recInter": "Registrar interacción",
-	"locationAccessTitle": "Acceso a la Ubicación Requerido",
-	"locationExplanation": "Tu ubicación es esencial para utilizar esta aplicación, permitiéndonos:",
-	"locationBullet1": "Rastrear y gestionar las ventas de filtros de manera eficaz",
-	"locationBullet2": "Conectarte con clientes e inventario en tu área",
-	"locationBullet3": "Proporcionar actualizaciones y soporte",
 	"privacyStatement": "Priorizamos tu privacidad y no compartiremos tus datos de geolocalización con terceros sin tu consentimiento explícito.",
-	"understandButton": "Entiendo y Acepto"
+	"understandButton": "Entiendo y Acepto",
+	"performInventoryCheck": "Realiza chequeo de inventario",
+	"inactiveEntrepreneur": "Emprendedor inactivo",
+	"lastOrder": "Último pedido",
+	"salesPeriodInProgress": "Periodo de ventas en curso",
+	"fromDate": "Desde",
+	"toDate": "Hasta",
+	"managerLabel": "Manager"
 }
