fixed gpt error in map modal

--- a/src/lib/translations/en/map.json
+++ b/src/lib/translations/en/map.json
@@ -7,6 +7,7 @@
 	"entrepreneursInTheArea": "Entrepreneurs in the area",
 	"inviteEntrepreneur": "+ Invite Entrepreneur",
 	"invited": "Invited",
+	"active": "Active",
 	"saveChanges": "Save changes",
 	"addLocation": "Add location",
 	"population": "Population (1000 inhabitants)",
