--- a/src/lib/translations/es/map.json
+++ b/src/lib/translations/es/map.json
@@ -7,6 +7,7 @@
 	"entrepreneursInTheArea": "Emprendedores en el area:",
 	"inviteEntrepreneur": "+ Invitar Emprendedor",
 	"invited": "Invitado.as",
+	"active": "Activo.as",
 	"saveChanges": "Guardar cambios",
 	"addLocation": "Agregar lugar",
 	"population": "Población (1000 habitantes)",
