--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -7,6 +7,7 @@
 	"invite": "invite",
 	"saveContinue": "Save and continue",
 	"name": "name",
+	"lastName": "last name",
 	"cancel": "cancel",
 	"continue": "continue",
 	"confirm": "confirm",
