--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -7,6 +7,7 @@
 	"invite": "invitar",
 	"saveContinue": "Guardar y continuar",
 	"name": "nombre",
+	"lastName": "apellido",
 	"cancel": "cancelar",
 	"continue": "continuar",
 	"confirm": "confirmar",
