--- a/src/lib/translations/es/manager.json
+++ b/src/lib/translations/es/manager.json
@@ -1,5 +1,11 @@
 {
 	"hello": "Hola",
+	"tooltipMessage": "Usa el mapa para invitar emprendedores",
+	"invitations": "Invitaciones",
+	"map": "Mapa",
+	"allEntrepreneurs": "Todos los emprendedores",
+	"myEntrepreneurs": "Mis emprendedores",
+	"noEntrepreneurs": "Ningún emprendedor, para invitar emprendedores usa el mapa",
 	"entrep": "emprendedore/as",
 	"youreManager": "Eres manager",
 	"inviteEntrep": "Invitar a un emprendedor/a",
