--- a/src/lib/translations/en/manager.json
+++ b/src/lib/translations/en/manager.json
@@ -9,7 +9,7 @@
 	"entrep": "entrepreneurs",
 	"youreManager": "You are a manager",
 	"inviteEntrep": "Invite a new entrepreneur",
-	"newEntrepEmail": "New entrepreneur email",
+	"newEntrepEmail": "Entrepreneur email",
 	"nosales": "There are no sales recorded for this entrepreneur",
 	"searchEntrep": "Search an entrepreneur by name, or email",
 	"invalidEmail": "Invalid email.",
