--- a/src/lib/translations/es/home.json
+++ b/src/lib/translations/es/home.json
@@ -1,6 +1,6 @@
 {
-	"title": "Bienvenido/a a Openversum",
-	"managerMsg": "Eres un/a Manager",
+	"title": "Bienvenido.a a Openversum",
+	"managerMsg": "Eres un.a Manager",
 	"privacyStatement": "Priorizamos tu privacidad y no compartiremos tus datos de geolocalización con terceros sin tu consentimiento explícito.",
 	"understandButton": "Entiendo y Acepto",
 	"performInventoryCheck": "Realiza chequeo de inventario",
