--- a/src/lib/translations/es/manager.json
+++ b/src/lib/translations/es/manager.json
@@ -6,11 +6,11 @@
 	"allEntrepreneurs": "Todos los emprendedores",
 	"myEntrepreneurs": "Mis emprendedores",
 	"noEntrepreneurs": "Ningún emprendedor, para invitar emprendedores usa el mapa",
-	"entrep": "emprendedore/as",
+	"entrep": "emprendedore.as",
 	"youreManager": "Eres manager",
-	"inviteEntrep": "Invitar a un emprendedor/a",
-	"newEntrepEmail": "Correo del nuevo/a emprendedor",
-	"nosales": "No hay ventas registradas de este emprededor/a",
+	"inviteEntrep": "Invitar a un emprendedor.a",
+	"newEntrepEmail": "Email del emprendedor.a",
+	"nosales": "No hay ventas registradas de este emprededor.a",
 	"searchEntrep": "Busca emprendedor por nombre o email",
 	"invalidEmail": "Email inválido.",
 	"invitationExists": "Ya existe una invitación con este email.",
