--- a/src/lib/translations/en/inventory.json
+++ b/src/lib/translations/en/inventory.json
@@ -1,4 +1,5 @@
 {
+	"giveModalTitle": "Filter delivey to",
 	"howManyFilters": "How many filters do you deliver?",
 	"nextInventoryCheck": "Next inventory check",
 	"minDelivery": "Minimum delivery of {{minQuantity}} filters",
