--- a/src/lib/translations/es/map.json
+++ b/src/lib/translations/es/map.json
@@ -10,7 +10,7 @@
 	"active": "Activo.as",
 	"saveChanges": "Guardar cambios",
 	"addLocation": "Agregar lugar",
-	"population": "Población (1000 habitantes)",
+	"population": "Población",
 	"distanceToProvider": "Distancia al proveedor (Km)",
 	"mainActivity": "Actividad Principal",
 	"mainActivityPlaceholder": "Actividades económicas, es importante mencionar si hay minería",
